# daemonizable

./: .cargo-rdme.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
crates/daemonizable/: Cargo.toml  README.md
crates/daemonizable-e2e-tests/: Cargo.toml
crates/daemonizable-e2e-tests/src/: lib.rs
crates/daemonizable-e2e-tests/tests/: channel_dispatch_security.rs  daemon_child_fd_cloexec.rs  daemon_child_lifecycle.rs  daemon_roundtrip.rs  daemon_send_after_foreground_exit.rs  daemon_survives_parent_exit.rs  detach_stdio_reopens_preclosed_fd.rs  detach_stdio_severs_inherited_stdio.rs  failed_spawn_cleanup.rs  framework_daemon_survives_parent_exit.rs  framework_e2e.rs  macro_ui.rs  multiple_daemons.rs  spawn_fd_isolation.rs
crates/daemonizable-e2e-tests/tests/macro_ui/: fail_on_generic_impl.rs  fail_on_generic_impl.stderr  fail_on_non_daemonizable_impl.rs  fail_on_non_daemonizable_impl.stderr  fail_on_struct.rs  fail_on_struct.stderr  pass_minimal.rs
crates/daemonizable-macros/: Cargo.toml  LICENSE-MIT  README.md
crates/daemonizable-macros/src/: lib.rs
crates/daemonizable/src/: app.rs  lib.rs
crates/daemonizable/src/app/: daemon_child.rs  daemonizable.rs  daemonizer.rs  mod.rs  run.rs
crates/daemonizable/src/ipc/: cloexec.rs  error.rs  mod.rs  pipe.rs  rpc.rs  spawn.rs
crates/daemonizable/src/ipc/channel/: mod.rs  receiver.rs  sender.rs
crates/daemonizable/src/ipc/pipe/: mod.rs  receiver.rs  sender.rs
crates/daemonizable/src/ipc/rpc/: client.rs  connection.rs  mod.rs  server.rs
crates/daemonizable/src/ipc/spawn/: handshake.rs  inherited.rs  mod.rs  process.rs  token.rs
