[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2024"
repository = "https://github.com/smessmer/daemonizable"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.0.1"

[workspace.dependencies]
command-fds = "^0.3.0"
# Internal companion crate. Declared here (like every other dependency) so its
# path + published version requirement live in one place; consuming crates just
# say `daemonizable-macros = { workspace = true }`. The `version` must match the
# workspace `version` above on release — keep the two in sync (or bump both via
# a release tool such as `cargo-release` / `release-plz`).
daemonizable-macros = { path = "crates/daemonizable-macros", version = "0.0.1" }
interprocess = "^2.3.0"
libc = "^0.2.182"
nix = "^0.31.2"
postcard = { version = "^1.0.0", default-features = false }
proc-macro2 = "^1.0.83"
quote = "^1.0.35"
rustversion = "^1.0.20"
serde = "^1.0.194"
syn = "^2.0.87"
tempfile = "^3.27"
thiserror = "^2.0.0"
trybuild = "^1.0.105"
