# End-to-end tests and helper binaries for the `daemonizable` crate.
#
# Lives in its own unpublished crate so the published `daemonizable` package
# stays lib-only: the helper binaries here exist solely to be spawned by the
# integration tests (via CARGO_BIN_EXE_*), and shipping them to crates.io
# would make `cargo install daemonizable` build test executables.

[package]
name = "daemonizable-e2e-tests"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# `testutils` exposes `spawn_daemon_process_with_exe`, which the failed-spawn
# cleanup tests use to drive the real handshake/cleanup path against a
# controlled helper binary (production always re-execs `/proc/self/exe`).
daemonizable = { path = "../daemonizable", features = ["testutils"] }
libc.workspace = true
# Safe syscall wrappers (setsid/getsid/kill/waitpid) used by both the helper
# binaries and the integration tests. A normal (not dev-only) dependency so the
# `[[bin]]` helpers below — which dev-dependencies do not reach — can use it.
nix = { workspace = true, features = ["poll", "process", "signal"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
interprocess.workspace = true
rustversion.workspace = true
tempfile.workspace = true
trybuild.workspace = true

# Helper binary used by the daemon-lifecycle integration tests. Spawned via
# fork+exec from start_background_process_with_exe so the test daemon runs in
# a clean process image instead of inheriting libtest's multithread state.
[[bin]]
name = "daemonizable-test-background"
path = "src/bin/daemonizable_test_background.rs"

# Minimal Daemonizable app used by the framework end-to-end tests
# (tests/framework_e2e.rs, tests/multiple_daemons.rs,
# tests/framework_daemon_survives_parent_exit.rs). Goes through the full
# production path — run::<App>() argv-sentinel dispatch, fork+exec re-exec
# spawn, build-id handshake — where the test-background helper drives the raw
# IPC primitives directly.
[[bin]]
name = "daemonizable-test-app"
path = "src/bin/daemonizable_test_app.rs"

# Helper for tests/detach_stdio_severs_inherited_stdio.rs. Writes sentinels to
# stdout/stderr on either side of a `detach_stdio` call so the test can assert
# pre-detach output reaches the inherited stdio and post-detach output is
# swallowed by /dev/null.
[[bin]]
name = "daemonizable-test-detach-stdio"
path = "src/bin/daemonizable_test_detach_stdio.rs"

# Helper for tests/detach_stdio_reopens_preclosed_fd.rs. Pre-closes a std fd,
# calls `detach_stdio`, and reports via exit code whether that fd ends up
# reopened onto /dev/null rather than left closed (the RAII edge case).
[[bin]]
name = "daemonizable-test-detach-stdio-preclosed"
path = "src/bin/daemonizable_test_detach_stdio_preclosed.rs"

# Helper for tests/daemon_survives_parent_exit.rs and
# tests/daemon_send_after_foreground_exit.rs. Stands in for a parent CLI:
# launches the daemon via start_background_process_with_exe and exits, so a
# test can assert what the daemon observes after its spawner is gone (that it
# survives; that its sends fail cleanly) — without forking the multithreaded
# libtest harness.
[[bin]]
name = "daemonizable-test-spawn-then-exit"
path = "src/bin/daemonizable_test_spawn_then_exit.rs"
