[package]
name = "daemonizable"
description = "Run your CLI app in the foreground or fork+exec it into a background daemon, with a build-id handshake and typed RPC between parent and daemon"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
version.workspace = true
keywords = ["daemon", "daemonize", "fork", "background", "cli"]
categories = ["command-line-interface", "os::unix-apis"]

[features]
default = ["macros"]
# Re-exports the #[daemonizable::main] attribute from the companion
# proc-macro crate.
macros = ["dep:daemonizable-macros"]
# Re-exports test-only helpers (`RpcConnection`, `InheritedFdsError`,
# `send_handshake`, `rpc_server_from_inherited_fds`, and the `*_with_exe` spawn
# helpers) so downstream crates can drive the IPC primitives in their own unit
# tests without re-implementing pipe wiring. NOT part of the stable surface:
# every one of these re-exports is also `#[doc(hidden)]`, and the feature is off
# by default, so the helpers never appear in the default published API or on
# docs.rs (see `[package.metadata.docs.rs]` below).
testutils = []

# docs.rs already builds with default features only, so the `testutils` feature
# (test-only helpers, all `#[doc(hidden)]`) is never compiled into the published
# docs. Pin the feature set explicitly so that stays true even if the default
# ever changes: `testutils` is deliberately omitted here. (Belt-and-suspenders —
# the `#[doc(hidden)]` markers would hide those items even under `--all-features`,
# as the CI `docs` job, which builds with all features, demonstrates.)
[package.metadata.docs.rs]
features = []

[dependencies]
command-fds.workspace = true
daemonizable-macros = { workspace = true, optional = true }
interprocess.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["poll", "fs", "process", "signal"] }
postcard = { workspace = true, features = ["use-std"] }
serde.workspace = true
thiserror.workspace = true

# serde's derive macro is used only by the in-crate `#[cfg(test)]` modules;
# the library itself references serde solely through trait bounds
# (`Serialize`/`DeserializeOwned`), so `derive` stays out of the published
# build and lives here as a dev-only feature.
[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

# Integration tests and their helper binaries live in the unpublished
# sibling crate `daemonizable-e2e-tests`, keeping this package lib-only
# for publishing.
